[package]
name = "teliosauto"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/Soulsender/teliosauto"
license = "GPL 3.0"
authors = ["Soulsender <soul@soulsender.me>"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
config = "0.15.4"
regex = "1.11.1"
telnet = "0.2.2"
